<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_account_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline" />

    <EditText
        android:id="@+id/edittext_account_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="text"
        android:layout_marginTop="16dp"
        android:hint="@string/username_hint"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        app:layout_constraintEnd_toStartOf="@id/guideline3"
        app:layout_constraintTop_toBottomOf="@id/image_account_logo"/>

    <EditText
        android:id="@+id/edittext_account_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="textPassword"
        android:layout_marginTop="16dp"
        android:hint="@string/password_hint"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        app:layout_constraintEnd_toStartOf="@id/guideline3"
        app:layout_constraintTop_toBottomOf="@id/edittext_account_username"/>

    <Button
        android:id="@+id/button_account_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/submit"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        app:layout_constraintEnd_toStartOf="@id/guideline3"
        app:layout_constraintTop_toBottomOf="@id/edittext_account_password"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>